--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -2,6 +2,8 @@
 
 <h1>Tweets</h1>
 
+<%= render 'form', tweet: Tweet.new %>
+
 <table>
   <thead>
     <tr>
@@ -10,15 +12,8 @@
     </tr>
   </thead>
 
-  <tbody>
-    <% @tweets.each do |tweet| %>
-      <tr>
-        <td><%= tweet.body %></td>
-        <td><%= link_to 'Show', tweet %></td>
-        <td><%= link_to 'Edit', edit_tweet_path(tweet) %></td>
-        <td><%= link_to 'Destroy', tweet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+  <tbody id='tweets'>
+    <%= render @tweets %>
   </tbody>
 </table>
 
