--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -2,7 +2,9 @@
 
 <h1>Tweets</h1>
 
-<%= render 'form', tweet: Tweet.new %>
+<section id="tweet_form">
+  <%= render 'form', tweet: Tweet.new %>
+</section>
 
 <table>
   <thead>
