Append alerts with turbo_stream

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,13 @@
   </head>
 
   <body>
-    <%= yield %>
+    <section id='flash'>
+      <% flash.each do |message_type, message| %>
+        <%= render partial: "shared/flash", locals: { message_type: message_type, message: message } %> 
+      <% end %>
+    </section>
+    <main>
+      <%= yield %>
+    </main>
   </body>
 </html>
