--- a/app/views/tweets/create.turbo_stream.erb
+++ b/app/views/tweets/create.turbo_stream.erb
@@ -1,2 +1,8 @@
 <%= turbo_stream.prepend "tweets", partial: "tweets/tweet", locals: { tweet: @tweet } %>
 <%= turbo_stream.replace "tweet_form", partial: "tweets/form", locals: { tweet: Tweet.new } %>
+<%= turbo_stream.append "flash", partial: "shared/flash", locals: { message_type: 'notice', message: "Your tweet was created successfully" } %>
+
+<%# <%= turbo_stream.append 'flash' do %1> %>
+<%#   <h1>Custom</h1> %>
+<%# <% end %1> %>
+
